<resources>
    <string name="app_name">MusicAssignmentApp</string>
    <string name="search_hint">please enter your song here</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="search">Search</string>
    <string name="album_name">Album Name :</string>
    <string name="artist_name">Artist Name :</string>
    <string name="artist_info">Info About Artist</string>
    <string name="artist_url_title">Please click below to listen from this artist</string>
    <string name="artist_url_info_title">Please click below to know about this artist</string>
    <string name="artist_summery_title">Short info : </string>
    <string name="album_not_find">"We are unable to find this album" </string>
</resources>
