<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".data.ui.musiclist.view.ArtistInfoActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_artist_title"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="italic"
            android:text="@string/artist_info"
            android:textColor="@color/colorBlack"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_artist_name"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_artist_title"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/artist_url_title"
            android:textColor="@color/colorBlack"
            android:id="@+id/txt_artist_url_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_artist_name"
    />
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_artist_url"
            android:clickable="true"
            android:focusable="true"
            android:autoLink="web"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_artist_url_title"
    />
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_summery_title"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:text="@string/artist_summery_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_artist_url"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:id="@+id/txt_summery"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_summery_title"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_more_info"
            android:text="@string/artist_url_info_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_summery"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:id="@+id/txt_more_info_url"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_more_info"/>


    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="4dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>